# wheels

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  install-hooks.sh
docker/: README.md  clang-test.dockerfile  gcc-test.dockerfile
runner/: CMakeLists.txt  runner.cpp
src/: CMakeLists.txt
src/wheels/: bits.hpp  helpers.hpp  random.hpp  string.hpp  variant.hpp
src/wheels/bits/: operations.hpp
src/wheels/helpers/: fallback.hpp  variadic.hpp
src/wheels/random/: random.hpp
src/wheels/string/: constexpr.hpp  hash.hpp  trash.hpp
src/wheels/variant/: overload.hpp
test-runner/: CMakeLists.txt  runner.cpp
tests/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
wheels/: CMakeLists.txt  string.hpp
wheels/helpers/: fallback.hpp  variadic.hpp
wheels/include/wheels/: helpers.hpp  random.hpp  string.hpp  variant.hpp
wheels/include/wheels/helpers/: variadic.hpp
wheels/include/wheels/random/: random.hpp
wheels/include/wheels/string/: constexpr.hpp  trash.hpp
wheels/include/wheels/variant/: overload.hpp
wheels/random/: random.hpp
wheels/string/: constexpr.hpp  trash.hpp
